# openchoreo

./: .coderabbit.yaml  .gitignore  .golangci.yml  .mockery.yaml  ADOPTERS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  GOVERNANCE.md  MAINTAINERS.md  Makefile  PROJECT  README.md  SECURITY.md  VERSION  check-tools.sh  go.mod  go.sum  test-alerts-incidents.md
.devcontainer/: post-install.sh
.github/: CODEOWNERS  codecov.yml  commitlint.config.mjs  dependabot.yml  pull_request_template.md
agents/finops-agent/: Dockerfile  Makefile  pyproject.toml
agents/finops-agent/src/: config.py  main.py
agents/finops-agent/src/agent/: __init__.py
agents/finops-agent/src/api/: __init__.py
agents/finops-agent/src/auth/: __init__.py  authz_client.py  jwt.py  oauth_client.py
agents/finops-agent/src/clients/: llm.py
agents/finops-agent/src/clients/backend/: report_backend.py
agents/finops-agent/src/models/: __init__.py  remediation_action.py
agents/finops-agent/src/templates/api/: finops_request.j2
agents/finops-agent/tests/: conftest.py  factories.py  test_agent_create.py  test_agent_routes.py  test_auth.py  test_config.py  test_mcp_client.py  test_middleware.py  test_models_and_templates.py  test_remediation_synthesis.py  test_report_routes.py  test_run_analysis.py  test_sql_backend.py
agents/portal-assistant/: Dockerfile  README.md  pyproject.toml
agents/portal-assistant/src/: config.py  main.py
agents/portal-assistant/src/agent/: builder.py  orchestrator.py  stream_events.py  stream_parser.py  tool_registry.py
agents/portal-assistant/src/agent/middleware/: __init__.py  empty_result_guard.py  loop_guard.py  output_transformer.py  tool_error_handler.py
agents/portal-assistant/src/api/: __init__.py  agent_routes.py
agents/portal-assistant/src/auth/: __init__.py  authz_client.py  dependencies.py  jwt.py
agents/portal-assistant/src/clients/: __init__.py  llm.py
agents/portal-assistant/src/models/: __init__.py  chat_response.py
agents/portal-assistant/src/templates/prompts/: perch_prompt.j2
agents/portal-assistant/tests/: conftest.py  test_chat_request_validation.py  test_mcp_cache.py  test_orchestrator.py  test_stream_events.py  test_stream_parser.py  test_tool_registry.py
cmd/: main.go
docs/: configure-build-plane.md  configure-controlplane-mcp-server.md  configure-workflow-plane.md  install-guide-multi-cluster.md  new-crd-design.md  observability-logging.md  quick-start-guide.md  resource-kind-reference-guide.md
finops-agent/: .gitignore  openapi.yaml  pyproject.toml
finops-agent/src/: config.py  logging_config.py  main.py  template_manager.py
finops-agent/src/agent/: agent.py
finops-agent/src/agent/middleware/: __init__.py  logging.py  tool_error_handler.py  tool_result_truncation.py
finops-agent/src/api/: agent_routes.py  report_routes.py
finops-agent/src/auth/: __init__.py  authz_client.py  authz_models.py  bearer.py  dependencies.py
finops-agent/src/clients/: llm.py  mcp.py
finops-agent/src/clients/backend/: __init__.py  report_backend.py  sql_backend.py
finops-agent/src/models/: __init__.py  finops_report.py
finops-agent/src/templates/api/: finops_request.j2
finops-agent/src/templates/prompts/: finops_agent_prompt.j2
hack/: test-helm-render.sh
install/: install.sh  (+9 more)
perch-agent/: README.md  auth-config.yaml  pyproject.toml
perch-agent/src/: config.py  logging_config.py  main.py  template_manager.py
perch-agent/src/agent/: __init__.py  action_store.py  agent.py  builder.py  orchestrator.py  recovery.py  stream_events.py  stream_parser.py  tool_registry.py
perch-agent/src/agent/middleware/: __init__.py  empty_result_guard.py  logging.py  output_transformer.py  tool_error_handler.py  write_guard.py
perch-agent/src/api/: agent_routes.py
perch-agent/src/auth/: authz_client.py  authz_errors.py  authz_models.py  bearer.py  dependencies.py  jwt.py
perch-agent/src/clients/: llm.py  mcp.py
perch-agent/src/models/: base.py  chat_response.py
perch-agent/src/templates/middleware/: logs.j2
perch-agent/src/templates/prompts/: perch_prompt.j2
perch-agent/tests/: __init__.py  test_action_store.py  test_chat_request_validation.py  test_mcp_cache.py  test_output_transformer.py  test_stream_events.py  test_stream_parser.py  test_tool_error_scrub.py  test_tool_registry.py  test_write_guard_word_boundary.py
rca-agent/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  openapi.yaml  pyproject.toml
rca-agent/src/: __init__.py  config.py  constants.py  helpers.py  logging_config.py  main.py  mcp_server.py  template_manager.py
rca-agent/src/agent/: __init__.py  agent.py  helpers.py  patch.py  tool_registry.py
rca-agent/src/agent/middleware/: __init__.py  logging.py  output_transformer.py  tool_error_handler.py
rca-agent/src/agent/prompts/: __init__.py  prompt.py
rca-agent/src/api/: __init__.py  agent_routes.py  report_routes.py  reports.py  routes.py
rca-agent/src/auth/: __init__.py  authz_client.py  authz_models.py  dependencies.py  jwt.py  oauth_client.py
rca-agent/src/clients/: __init__.py  llm.py  mcp.py  openchoreo_api.py  opensearch.py
rca-agent/src/clients/backend/: __init__.py  opensearch_backend.py  report_backend.py  sql_backend.py
rca-agent/src/core/: __init__.py  agent.py  auth.py  config.py  constants.py  llm.py  mcp.py  opensearch.py  stream_parser.py  template_manager.py  utils.py
rca-agent/src/core/authn/: __init__.py  dependencies.py  jwt.py
rca-agent/src/core/authz/: __init__.py  client.py  dependencies.py  models.py
rca-agent/src/core/middleware/: __init__.py  logging.py  output_processor.py  timing.py
rca-agent/src/core/models/: chat_response.py  rca_report.py
rca-agent/src/core/prompts/: system_prompt.py
rca-agent/src/models/: __init__.py  chat_response.py  rca_report.py  remediation_result.py
rca-agent/src/templates/api/: rca_request.j2
rca-agent/src/templates/middleware/: component_logs.j2  metrics.j2  project_logs.j2  traces.j2
rca-agent/src/templates/prompts/: chat_agent_prompt.j2  chat_prompt.j2  rca_agent_prompt.j2  remed_agent_prompt.j2  system_prompt.j2
(+3742 files in other folders)
