[project]
name = "rca-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "authlib>=1.4.0",
    "fastapi[standard]>=0.121.1",
    "jinja2>=3.1.0",
    "langchain>=1.0.5",
    "langchain-anthropic>=1.3.1",
    "langchain-mcp-adapters>=0.1.13",
    "langchain-openai>=1.0.2",
    "numpy>=2.3.5",
    "opensearch-py[async]>=2.8.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ruff>=0.8.5",
]

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = [".venv", "__pycache__", ".git"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
