[project]
name = "finops-agent"
version = "0.1.0"
description = "FinOps agent for analyzing component budget overruns"
requires-python = ">=3.14"
dependencies = [
    "authlib>=1.7.2",
    "fastapi>=0.137.1",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "langchain>=1.3.7",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.0",
    "aiosqlite>=0.22.0",
    "asyncpg>=0.31.0",
    "sqlalchemy[asyncio]>=2.0.50",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.uv]
exclude-dependencies = ["zstandard", "pywin32"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = [".venv", "__pycache__", ".git"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
